Searchbar de l'indexe

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,4 +12,5 @@
 @import "show_map";
 @import "pointer";
 @import "index_cards";
-@import "searchbar"
+@import "searchbar";
+@import "searchbarindex"
