Searchbar dans l'indexe

--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -1,5 +1,5 @@
 <div class="ms-2 me-2">
-
+<!-- Searchbar de l'index -->
 <div class="col-sm-8 ">
         <%= form_with url: watches_path, method: :get, class: "d-flex" do %>
           <%= text_field_tag :query,
