--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -17,7 +17,7 @@
     </div>
 
 <!-- Booking & watches -->
-    <div class="col-md-10">
+    <div class="col-md-10 p-0">
     <% if @section.nil? || @section == 'bookings' %>
     <h3>My Bookings:</h3>
     <div class="container">
