--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 </div>
 <!-- Fin de la banner -->
 <div class="container">
-  <div class="row mt-3">
+  <div class="row my-5">
     <div class="col-6 gx-3">
       <div class="card-trip">
         <div class="card-trip-infos">
