accepted or decline done

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,7 +13,7 @@
 @import "pointer";
 @import "index_cards";
 @import "searchbar";
-@import "searchbarindex"
+@import "searchbarindex";
 @import "cards_dashboard";
 @import "searchbar";
 
