--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -36,6 +36,8 @@
                 <h5 class="card-title mt-3"><%= booking.watch.brand.upcase %></h5>
                 <p class="card-text"><%= booking.watch.price_per_day %> €</p>
                 <div class="d-flex justify-content-end">
+                  <%= link_to 'Accept', accept_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } if booking.booking_status.nil?%>
+                  <%= link_to 'Decline', decline_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } if booking.booking_status.nil?%>
                   <%= link_to booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete-button" do %>
                   <i class="fas fa-trash-alt"></i>
                 <% end %>
