--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -1,9 +1,20 @@
 .sidebar-sticky {
   position: sticky;
-  top: 0;
-  height: 100vh;
+  top: 66px;
+  height: 88vh;
   overflow-x: hidden;
   overflow-y: auto;
+  background-color: white;
+
+  a {
+    color: black;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+    transition: 0.1s;
+  }
 }
 .avatar {
   vertical-align: middle;
@@ -16,9 +27,14 @@
   flex-direction: column;
   justify-content: top;
   align-items: center;
-  height: 100%;
   margin-top: 2em;
 }
 .flex-center p {
-  padding-top: 10px;
+  color: black;
+  font-weight: 300;
+  text-decoration: underline;
+}
+
+.onglet {
+  align-items: left;
 }
