ajout Cocowatch dans navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,3 +22,9 @@
   padding-top: 60px;
   min-height: 90vh;
 }
+
+.navbar-lewagon .ecriture-logo {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
