--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -10,8 +10,11 @@
           <div style="padding-bottom: 1em;">
           <%= link_to "My watch", dashboard_path(section: 'watches') %>
           </div>
-          <div>
+          <div style="padding-bottom: 1em;">
           <%= link_to "My booking", dashboard_path(section: 'bookings') %>
+          </div>
+          <div style="padding-bottom: 1em;">
+          <%= link_to "My booking request", dashboard_path(section: 'bookings request') %>
           </div>
         </div>
       </div>
@@ -38,6 +41,36 @@
                 <h5 class="card-title mt-3"><%= booking.watch.brand.upcase %></h5>
                 <p class="card-text"><%= booking.watch.price_per_day %> €</p>
                 <div class="d-flex justify-content-end">
+                  <%= link_to booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete-button" do %>
+                  <i class="fas fa-trash-alt"></i>
+                <% end %>
+              </div>
+            </div>
+          </div>
+         </div>
+        <% end %>
+    </div>
+    <% end %>
+
+      <% if @section.nil? || @section == 'bookings request' %>
+    <h3>My Bookings:</h3>
+    <div class="container">
+      <div class="d-flex flex-wrap justify-cards">
+        <% @watches.each do |watch| %>
+          <% watch.bookings.each do |booking| %>
+          <div class="card shadow m-3" style="width: 18rem;">
+            <div class="card-body">
+              <%= link_to(watch_path(booking)) do %>
+                <% if booking.watch.photo.attached? %>
+                  <%= cl_image_tag booking.watch.photo.key, class: "card-img-top" %>
+                <% else %>
+                  <%= image_tag "https://rb.gy/c98mip", class: "card-img-top" %>
+                <% end %>
+              <% end %>
+              <div class="card-info">
+                <h5 class="card-title mt-3"><%= booking.watch.brand.upcase %></h5>
+                <p class="card-text"><%= booking.watch.price_per_day %> €</p>
+                <div class="d-flex justify-content-end">
                   <%= link_to 'Accept', accept_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } if booking.booking_status.nil?%>
                   <%= link_to 'Decline', decline_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } if booking.booking_status.nil?%>
                   <%= link_to booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete-button" do %>
@@ -47,6 +80,7 @@
             </div>
           </div>
          </div>
+        <% end %>
         <% end %>
     </div>
     <% end %>
