--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -13,7 +13,7 @@
   <div class="d-flex justify-content-center">
     <div class="flexbox col-8">
       <% @watches.each do |watch| %>
-        <div class="card shadow">
+        <div class="card shadow mxh mb">
             <div class="card_height">
               <%= link_to(watch_path(watch)) do %>
                 <% if watch.photo.attached? %>
