--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -70,12 +70,20 @@
               <div class="card-info">
                 <h5 class="card-title mt-3"><%= booking.watch.brand.upcase %></h5>
                 <p class="card-text"><%= booking.watch.price_per_day %> €</p>
-                <div class="d-flex justify-content-end">
-                  <%= link_to 'Accept', accept_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } if booking.booking_status.nil?%>
-                  <%= link_to 'Decline', decline_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } if booking.booking_status.nil?%>
+                <div class="d-flex justify-content-around">
+                  <%= link_to accept_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' }  do %>
+                  <% if booking.booking_status.nil? %>
+                  <i class="fas fa-solid fa-check"></i>
+                  <% end %>
+                  <% end %>
+                  <%= link_to decline_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } do %>
+                  <%  if booking.booking_status.nil? %>
+                  <i class="fas fa-solid fa-ban"></i>
+                  <% end %>
+                  <% end %>
                   <%= link_to booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete-button" do %>
                   <i class="fas fa-trash-alt"></i>
-                <% end %>
+                  <% end %>
               </div>
             </div>
           </div>
