--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -8,13 +8,13 @@
         <p><%= current_user.first_name %> <%= current_user.last_name %></p>
         <div class="onglets">
           <div style="padding-bottom: 1em;">
-          <%= link_to "My watch", dashboard_path(section: 'watches') %>
+          <%= link_to "My watches", dashboard_path(section: 'watches') %>
           </div>
           <div style="padding-bottom: 1em;">
-          <%= link_to "My booking", dashboard_path(section: 'bookings') %>
+          <%= link_to "My bookings", dashboard_path(section: 'bookings') %>
           </div>
           <div style="padding-bottom: 1em;">
-          <%= link_to "My booking request", dashboard_path(section: 'bookings request') %>
+          <%= link_to "My booking requests", dashboard_path(section: 'bookings request') %>
           </div>
         </div>
       </div>
@@ -24,7 +24,7 @@
 <!-- Booking & watches -->
     <div class="col-md-10 p-0">
     <% if @section.nil? || @section == 'bookings' %>
-    <h3>My Bookings:</h3>
+    <h3>My bookings</h3>
     <div class="container">
       <div class="d-flex flex-wrap justify-cards">
         <% @bookings.each do |booking| %>
@@ -53,7 +53,7 @@
     <% end %>
 
       <% if @section.nil? || @section == 'bookings request' %>
-    <h3>My Bookings:</h3>
+    <h3>My booking requests</h3>
     <div class="container">
       <div class="d-flex flex-wrap justify-cards">
         <% @watches.each do |watch| %>
@@ -94,7 +94,7 @@
     <% end %>
 
   <% if @section.nil? || @section == 'watches' %>
-    <h3>My Watches:</h3>
+    <h3>My watches</h3>
       <div class="container">
           <div class="d-flex flex-wrap justify-cards">
             <% @watches.each do |watch| %>
