--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,4 +1,4 @@
-<div class="">
+<div class="background_color">
   <h2 class="d-flex justify-content-center py-3 border-bottom bg-black text-white">Watches available</h2>
   <%= render "shared/index" %>
 </div>
