--- a/app/views/watches/_marker.html.erb
+++ b/app/views/watches/_marker.html.erb
@@ -1,3 +1,3 @@
 <%= link_to watch_path(watch) do %>
-  <%= image_tag "watch.png", class:"marker" %>
+  <%= image_tag "logo_marker.png", class:"marker" %>
 <% end %>
