--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -27,7 +27,7 @@
     <h3>My bookings</h3>
     <div class="container">
       <div class="d-flex flex-wrap justify-cards">
-        <% @bookings.each do |booking| %>
+        <% @bookings.not_nil.each do |booking| %>
           <div class="card shadow m-3" style="width: 18rem;">
             <div class="card-body">
               <%= link_to(watch_path(booking.watch)) do %>
