Seed : ajout des bookings // En cours : correction de l'indentation et du fonctionnement des sections dans le dashboard

--- a/app/assets/stylesheets/components/_cards_dashboard.scss
+++ b/app/assets/stylesheets/components/_cards_dashboard.scss
@@ -1,9 +1,13 @@
-h3 {
+.h3-dashboard {
   background-color: black;
   color: white;
   text-align: center;
   padding: 1em;
   width: 100%;
+}
+
+.p-dashboard {
+  text-align: center;
 }
 
 .justify-cards {
