--- a/app/assets/stylesheets/components/_cards_dashboard.scss
+++ b/app/assets/stylesheets/components/_cards_dashboard.scss
@@ -26,6 +26,10 @@
 
 .card-img-top {
   border-radius: 4px 4px 0 0;
+  width: 100%;
+  height: 330px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .card-info {
