--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -76,7 +76,7 @@
                     <p class="card-text"><%= booking.watch.price_per_day %> €</p>
                     <div class="container">
                       <div class="d-flex justify-content-around">
-                        <%= link_to booking_path(booking), method: :delete, data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete-button", :params => { section: 'bookings' } do %>
+                        <%= link_to booking_path(booking), method: :delete, data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete-button" do %>
                           <i class="fas fa-trash-alt"></i>
                         <% end %>
                       </div>
@@ -110,36 +110,25 @@
                     <p class="card-text"> <%= booking.user.first_name %> wants to rent your watch </p>
                     <p class="card-text"> Total price: <%= booking.watch.price_per_day %> €</p>
 
-                      <% if booking.booking_status.nil? %>
-                        <p style ="text-align: center"> Do you want to accept this booking request ? </p>
+                    <% case booking.booking_status %>
+                      <% when nil %>
+                        <p style="text-align: center">Do you want to accept this booking request?</p>
                         <div class="d-flex justify-content-around">
                           <%= link_to accept_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } do %>
                             <i class="fas fa-check-circle"></i>
                           <% end %>
-                          <%= link_to decline_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } do %>
-                            <i class="fas fa-times-circle"></i>
-                          <% end %>
-                        </div>
-
-                      <% elsif booking.booking_status == 'accepted' %>
-                        <p>You have accepted this booking. Do you want to refuse it ? </p>
-                        <div class="d-flex justify-content-around">
-                          <%= link_to decline_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } do %>
-                            <i class="fas fa-check-circle" style="color: red;"></i>
-                          <% end %>
-                          </div>
-
-                      <% else %>
-                        <p>You have declined this booking. Do you want to accept it ? </p>
-                        <div class="d-flex justify-content-around">
-                          <%= link_to accept_booking_path(booking), data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' } do %>
-                            <i class="fas fa-check-circle"></i>
-                          <% end %>
-                          <%= link_to booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "delete-button" do %>
+                          <%= link_to booking_path(booking), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "delete-button" do %>
                             <i class="fas fa-trash-alt"></i>
                           <% end %>
-                        <% end %>
-                      </div>
+                        </div>
+                      <% when 'accepted' %>
+                        <p>You have accepted this booking. Do you want to refuse it?</p>
+                        <div class="d-flex justify-content-around">
+                          <%= link_to booking_path(booking), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: "delete-button" do %>
+                            <i class="fas fa-trash-alt"></i>
+                          <% end %>
+                        </div>
+                    <% end %>
 
                     </div>
                   </div>
